--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Care for Life | ABA Therapy</title>
 <meta name="author" content="José Adrian Pupo Montero" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="../images/abalogo.png" type="image/png"/>
+<link rel="icon" href="/images/abalogo.png" type="image/png"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
 <link href="css/teraphy.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
