--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#teamLayoutGrid" target="_self"><i class="fa fa-people-group"></i>&nbsp;TEAM</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#collageFlexGrid" target="_self"><i class="fa fa-phone-square"></i>&nbsp;CONTACT</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#aboutLayoutGrid1" target="_self"><i class="fa fa-address-book"></i>&nbsp;ABOUT</a>               </li>
-               <li role="menuitem" class="nav-item"><a class="nav-link" href="login.php" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
+               <li role="menuitem" class="nav-item"><a class="nav-link" href="login.html" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
             </ul>
          </nav>
       </div>
@@ -265,7 +265,7 @@
             <li><a role="menuitem" href="#teamLayoutGrid" class="headerMenu2-effect"><i class="fa fa-people-group overlay-icon"></i>&nbsp;TEAM</a></li>
             <li><a role="menuitem" href="#newsletterContainer" class="headerMenu2-effect"><i class="fa fa-phone-square overlay-icon"></i>&nbsp;CONTACT</a></li>
             <li><a role="menuitem" href="#aboutLayoutGrid1" class="headerMenu2-effect"><i class="fa fa-address-book overlay-icon"></i>&nbsp;ABOUT</a></li>
-            <li role="menuitem" class="nav-item"><a class="nav-link" href="login.php" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
+            <li role="menuitem" class="nav-item"><a class="nav-link" href="login.html" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
          </ul>
       </div>
       <a class="close-button" id="headerMenu2-close" href="#" role="button" aria-hidden="true"><span></span></a>
