--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Care for Life | ABA Therapy</title>
-<meta name="author" content="José Adrian Pupo Montero" />
+<meta name="author" content="José Adrian Pupo Montero">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="images/abalogo.png" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
