--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/jquery.ui.effect.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/context.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/overlay.min.js"></script>
 <script src="js/script.js"></script>
