--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/jquery.ui.effect.min.js"></script>
 <script src="js/popper.min.js"></script>
-<script src="js/context.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/overlay.min.js"></script>
 <script src="js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+<script type='text/javascript'>
+  $(document).ready(function() {
+    $(document).bind("contextmenu", function(e) {
+      return false;
+    });
+  });
+</script>
 <body>
    <div id="wb_headerContainer">
       <div id="headerContainer">
