--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <nav id="wb_headerMenu1" style="display:inline-block;width:579px;height:40px;z-index:1;">
             <ul id="headerMenu1" role="menubar" class="nav">
                <li role="menuitem" class="nav-item firstmain"><a class="nav-link" href="#welcomeLayoutGrid" target="_self"><i class="fa fa-home"></i>&nbsp;HOME</a>               </li>
-               <li role="menuitem" class="nav-item"><a class="nav-link" href="#teamLayoutGrid" target="_self"><i class="fa fa-team-group"></i>&nbsp;TEAM</a>               </li>
+               <li role="menuitem" class="nav-item"><a class="nav-link" href="#teamLayoutGrid" target="_self"><i class="fa fa-people-group"></i>&nbsp;TEAM</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#collageFlexGrid" target="_self"><i class="fa fa-phone-square"></i>&nbsp;CONTACT</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#aboutLayoutGrid1" target="_self"><i class="fa fa-address-book"></i>&nbsp;ABOUT</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="login.html" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
