--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="José Adrian Pupo Montero">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="images/abalogo.png" type="image/png">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
+<link href="css/fontawesome6.min.css" rel="stylesheet">
 <link href="css/teraphy.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <script src="js/jquery-1.12.4.min.js"></script>
