--- a/login.html
+++ b/login.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/login.css">
+  <title>Care for Life Login</title>
+</head>
+<body>
+  <div class="login-container">
+    <img src="images/abalogo.png" alt="Care for Life Logo" class="logo">
+    <form>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Sign In</button>
+    </form>
+    <a href="#" class="signup-link">Sign up now</a>
+    <a href="#">Forgot Password?</a>
+  </div>
+  <div class="signup-container">
+    <img src="images/abalogo.png" alt="Care for Life Logo" class="logo">
+    <form>
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Sign Up</button>
+    </form>
+    <a href="#" class="login-link">Already have an account? Sign in</a>
+  </div>
+  <script src="js/login.js"></script>
+</body>
+</html>
 
