--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Care for Life | ABA Therapy</title>
 <meta name="author" content="José Adrian Pupo Montero">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" src="https://i.imgur.com/Oqq2x5C.png" type="image/png">
+<link rel="icon" src="https://ars1play3r.github.io/images/abalogo.png" type="image/png">
 <link href="css/fontawesome6.min.css" rel="stylesheet">
 <link href="css/teraphy.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
