--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div id="wb_welcomeCarousel">
                <div id="welcomeCarousel" class="carousel slide" data-bs-ride="carousel">
                   <ol class="carousel-indicators">
-                     <li data-bs-target="#welcomeCarousel" data-bs-slide-to="0" class="active"></li>
+                     <!--li data-bs-target="#welcomeCarousel" data-bs-slide-to="0" class="active"></li>
                      <li data-bs-target="#welcomeCarousel" data-bs-slide-to="1"></li>
-                     <li data-bs-target="#welcomeCarousel" data-bs-slide-to="2"></li>
+                     <li data-bs-target="#welcomeCarousel" data-bs-slide-to="2"></li-->
                   </ol>
                   <div class="carousel-inner">
                      <div class="carousel-item frame-1 active">
@@ -89,6 +89,7 @@
                            </div>
                         </div>
                      </div>
+            
          </div>
       </div>
    </div>
