--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul id="headerMenu1" role="menubar" class="nav">
                <li role="menuitem" class="nav-item firstmain"><a class="nav-link" href="#welcomeLayoutGrid" target="_self"><i class="fa fa-home"></i>&nbsp;HOME</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#teamLayoutGrid" target="_self"><i class="fa fa-people-group"></i>&nbsp;TEAM</a>               </li>
-               <li role="menuitem" class="nav-item"><a class="nav-link" href="#collageFlexGrid" target="_self"><i class="fa fa-phone-square"></i>&nbsp;CONTACT</a>               </li>
+               <li role="menuitem" class="nav-item"><a class="nav-link" href="contact.html" target="_self"><i class="fa fa-phone-square"></i>&nbsp;CONTACT</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="#aboutLayoutGrid1" target="_self"><i class="fa fa-address-book"></i>&nbsp;ABOUT</a>               </li>
                <li role="menuitem" class="nav-item"><a class="nav-link" href="login.html" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
             </ul>
@@ -186,11 +186,11 @@
                <img src="images/child.jpeg" id="collageImage1" alt="" width="227" height="386">
             </div>
          </div>
-         <div class="item-3">
+         <!--div class="item-3">
             <div id="wb_collageImage2" style="display:inline-block;width:472px;height:433px;z-index:22;">
                <img src="images/contact.png" id="collageImage2" alt="" width="472" height="434">
             </div>
-         </div>
+      </div-->
          <div class="item-2">
             <div id="wb_collageImage3" style="display:block;width:100%;height:auto;z-index:23;">
                <img src="images/CIRCULO%202.png" id="collageImage3" alt="" width="207" height="207">
@@ -255,7 +255,7 @@
          <ul class="drilldown-menu" role="menu">
             <li><a role="menuitem" href="#welcomeLayoutGrid" class="headerMenu2-effect"><i class="fa fa-home overlay-icon"></i>&nbsp;HOME</a></li>
             <li><a role="menuitem" href="#teamLayoutGrid" class="headerMenu2-effect"><i class="fa fa-people-group overlay-icon"></i>&nbsp;TEAM</a></li>
-            <li><a role="menuitem" href="#newsletterContainer" class="headerMenu2-effect"><i class="fa fa-phone-square overlay-icon"></i>&nbsp;CONTACT</a></li>
+            <li><a role="menuitem" href="contact.html" class="headerMenu2-effect"><i class="fa fa-phone-square overlay-icon"></i>&nbsp;CONTACT</a></li>
             <li><a role="menuitem" href="#aboutLayoutGrid1" class="headerMenu2-effect"><i class="fa fa-address-book overlay-icon"></i>&nbsp;ABOUT</a></li>
             <li role="menuitem" class="nav-item"><a class="nav-link" href="login.html" target="_self"><i class="fa fa-regular fa-money-bill-1"></i>&nbsp;Sign Up</a>               </li>
          </ul>
