--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
                <img src="images/child.jpeg" id="collageImage1" alt="" width="227" height="386">
             </div>
          </div>
+         <div class="item-2">
+            <div id="wb_collageImage1" style="display:block;width:100%;height:auto;z-index:21;">
+               <img src="images/circulo.png" id="collageImage1" alt="" width="227" height="386">
+            </div>
+         </div>
+         <div class="item-3">
+            <div id="wb_collageImage1" style="display:block;width:100%;height:auto;z-index:21;">
+               <img src="images/child.jpeg" id="collageImage1" alt="" width="227" height="386">
+            </div>
+         </div>
       </div>
    </div>
    <div id="wb_joinLayoutGrid">
