--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
          </div>
          <div class="col-2">
             <div class="col-2-padding">
-               <div id="wb_aboutHeading2" style="display:block;width:100%;z-index:14;">
+               <!--iv id="wb_aboutHeading2" style="display:block;width:100%;z-index:14;">
                   <h1 id="aboutHeading2">We provide services to<br>homes, schools,<br>daycares and child<br>facilities .</h1>
-               </div>
+               </div-->
             </div>
          </div>
       </div>
@@ -182,16 +182,6 @@
             </div>
          </div>
          <div class="item-1">
-            <div id="wb_collageImage1" style="display:block;width:100%;height:auto;z-index:21;">
-               <img src="images/child.jpeg" id="collageImage1" alt="" width="227" height="386">
-            </div>
-         </div>
-         <div class="item-2">
-            <div id="wb_collageImage1" style="display:block;width:100%;height:auto;z-index:21;">
-               <img src="images/circulo.png" id="collageImage1" alt="" width="227" height="386">
-            </div>
-         </div>
-         <div class="item-3">
             <div id="wb_collageImage1" style="display:block;width:100%;height:auto;z-index:21;">
                <img src="images/child.jpeg" id="collageImage1" alt="" width="227" height="386">
             </div>
